# mini-redis

./: Cargo.toml  README.md  build.rs
conf/: mini-redis.yml
proto/: mini-redis.proto
src/: config.rs  db.rs  lib.rs  raft.rs  server.rs
src/protobuf/: mini_redis.rs  mod.rs
